--- a/WebContent/yd_offline-activity.html
+++ b/WebContent/yd_offline-activity.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<meta name="description" content="饺耳世家">
-		<meta name="keywords" content="饺耳世家、美食">
+		<meta name="description" content="舵爷火锅">
+		<meta name="keywords" content="舵爷火锅、美食">
 		<title>线下活动</title>
-		<link href="images/top-icon.png" type="image/x-icon" rel="shortcut icon" />	
+		<link href="images/dy-icon.png" type="image/x-icon" rel="shortcut icon" />	
 		<link href="css/m-style.css" rel="stylesheet">
 		<script src="js/jquery-1.11.1.min.js"></script>
 	</head>
@@ -21,13 +21,13 @@
 				<h3 class="color-dd2727">店内充值卡满赠活动正在火热进行。</h3>
 				<img src="images/chongzhi.jpg">
 				<p class="color-dd2727">充1000赠100，充5000赠750，最高赠到4000！！！</p>
-				<p>还有金牌饺子券和豪礼相送</p>
 				<p>拿着充值卡，享受会员价</p>
 				<p>生日当天持卡消费还将获赠镇店菜、长寿面各一份</p>
-				<p class="center color-dd2727">饺耳世家地址</br>
+				<p class="color-dd2727">注释：活动详情请到店咨询，活动解释权归舵爷火锅</p>
+				<p class="center color-dd2727">舵爷火锅地址</br>
 				北京市朝阳区朝阳路69号财满街中国银行二楼</p>
-				<p class="center">饺耳世家JIAOEAR（CNJiaoZi）<br>
-                                     美食热线：010-80440188/80443266</p>
+				<p class="center">舵爷火锅（一舵一世界）<br>
+                                     美食热线：010-89942510/89942012</p>
 				<img src="images/ewm.jpg" style="width:70%; margin:0 auto;">
 			</div>
 		</div>	
