--- a/WebContent/yd_about_us.html
+++ b/WebContent/yd_about_us.html
@@ -55,7 +55,7 @@
                         <p>生日当天持卡消费还将获赠镇店菜、长寿面各一份(详情请质询店内服务员)</p>
                         <h4 class="color-dd2727">活动三</h4>
                         <p>店内充值卡满赠活动正在火热进行。充1000赠100，充5000赠750，最高赠到4000！！！</br>还有金牌饺子券和豪礼相送拿着充值卡，享受会员价</p>
-                         <p class="color-dd2727">注释：具体活动详情请到店咨询，本活动最终解释权归饺耳世家所有。</p>
+                         <p class="color-dd2727">注释：具体活动详情请到店咨询，本活动最终解释权归舵爷火锅所有。</p>
 				</div>
 				<div class="our-list">
 					 <h3>人才招聘</h3>
